# marginalia

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-07-13-marginalia-design.md
src/: app.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/editor/: code-theme.ts  markdown.ts  plaintext.ts  syntax-reveal.ts
src/files/: import.ts  io.ts  recent.ts  rtf.ts
src/styles/: app.css  editor.css  empty.css  tokens.css
src/ui/: modal.ts  notice.ts  statusbar.ts  theme.ts
